# phi

./: .gitignore  README.md
_mzk84_commons/: mzk84_commons.h
_mzk84_utils/: _std_includes.h
cpp_web/: CMakeLists.txt  Commands.txt
cpp_web/_cpp_web_box/: Dockerfile
cpp_web/_cpp_web_box_heroku/: Dockerfile
cpp_web/_docker_box/: Dockerfile
cpp_web/_docker_box_heroku/: Dockerfile
cpp_web/cpp_web/: CMakeLists.txt  Dockerfile
cpp_web/cpp_web/src/: _main.cpp
cpp_web/src/: _main.cpp  _mzk84_utils.h
cpp_world/: CMakeLists.txt  CMakeSettings.json
cpp_world/data/: LargeFileExample.txt
cpp_world/src/: BinarySearch.cpp  BinarySearch.h  BinarySearchTest.h  CandyCrush1D.cpp  CandyCrush1D.h  CandyCrush1DTest.h  LargeFileSorting.cpp  LargeFileSorting.h  LargeFileSortingTest.h  ListElem.h  ListElemImpl.cpp  ListElemImpl.h  ListFunctions.cpp  ListFunctions.h  ListFunctionsTest.h  ListTestSuite.h  MaxNumOfUniqueChars.cpp  MaxNumOfUniqueChars.h  MaxNumOfUniqueCharsTest.h  MyBinarySearchTree.cpp  MyBinarySearchTree.h  MyBinarySearchTreeTest.h  MyList.cpp  MyList.h  MyListTest.h  PatternExpansion.cpp  PatternExpansion.h  PatternExpansionTest.h  RecentItemsCache.cpp  RecentItemsCache.h  RecentItemsCacheTest.h  VisitingTree.h  VisitingTreeTest.h  _main.cpp  _mzk84_utils.h  _std_includes.h
pow_sha1/: CMakeLists.txt  CMakeSettings.json
pow_sha1/src/: PoW_SHA1.cpp  PoW_SHA1.h  _includes.h  _main.cpp
